--- a/Spy See/Spy See/Base.lproj/Main.storyboard
+++ b/Spy See/Spy See/Base.lproj/Main.storyboard
@@ -89,7 +89,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="邀請碼：" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="v6b-B1-vFV">
-                                <rect key="frame" x="96.333333333333329" y="362" width="200.33333333333343" height="34"/>
+                                <rect key="frame" x="96.333333333333329" y="362" width="200.33333333333337" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="RJ7-qX-kyh"/>
                                 </constraints>
@@ -463,10 +463,42 @@
                     <view key="view" contentMode="scaleToFill" id="C1D-hj-Krs">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="請等候其他玩家完成投票" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cpl-Nb-6uS">
+                                <rect key="frame" x="96.666666666666686" y="175" width="200" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="UUi-mE-N49"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wsI-JM-UsA">
+                                <rect key="frame" x="5" y="368" width="383" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="383" id="vRe-2e-N8y"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="W2d-wJ-21l"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="W2d-wJ-21l" firstAttribute="bottom" secondItem="wsI-JM-UsA" secondAttribute="bottom" constant="414" id="3oz-qn-G2Q"/>
+                            <constraint firstItem="cpl-Nb-6uS" firstAttribute="top" secondItem="W2d-wJ-21l" secondAttribute="top" constant="72" id="IcF-9g-qXF"/>
+                            <constraint firstItem="W2d-wJ-21l" firstAttribute="bottom" secondItem="cpl-Nb-6uS" secondAttribute="bottom" constant="622" id="MC3-Im-chX"/>
+                            <constraint firstItem="wsI-JM-UsA" firstAttribute="top" secondItem="cpl-Nb-6uS" secondAttribute="bottom" constant="172" id="dJz-p4-Tkp"/>
+                            <constraint firstItem="cpl-Nb-6uS" firstAttribute="centerX" secondItem="C1D-hj-Krs" secondAttribute="centerX" id="hoX-O9-Lvd"/>
+                            <constraint firstItem="wsI-JM-UsA" firstAttribute="centerX" secondItem="C1D-hj-Krs" secondAttribute="centerX" id="rf1-dY-ZZZ"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="i8B-P3-WGw"/>
+                    <connections>
+                        <outlet property="votedLabel" destination="wsI-JM-UsA" id="NNL-KM-CXx"/>
+                        <outlet property="waitLabel" destination="cpl-Nb-6uS" id="Z3B-43-ATU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="13w-Op-Qcu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
