--- a/Spy See/Spy See/Base.lproj/Main.storyboard
+++ b/Spy See/Spy See/Base.lproj/Main.storyboard
@@ -89,7 +89,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="邀請碼：" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="v6b-B1-vFV">
-                                <rect key="frame" x="96.333333333333329" y="362" width="200.33333333333337" height="34"/>
+                                <rect key="frame" x="96.333333333333329" y="362" width="200.33333333333343" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="RJ7-qX-kyh"/>
                                 </constraints>
@@ -491,6 +491,17 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="csN-89-bh3">
+                                <rect key="frame" x="146.66666666666666" y="661" width="100" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="W9T-I1-Tz6"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="下一輪"/>
+                                <connections>
+                                    <action selector="nextRound:" destination="coD-jQ-cyL" eventType="touchUpInside" id="smy-yc-5On"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="W2d-wJ-21l"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -499,16 +510,20 @@
                             <constraint firstItem="iGL-aX-qG2" firstAttribute="centerX" secondItem="C1D-hj-Krs" secondAttribute="centerX" id="Aap-PV-Qeg"/>
                             <constraint firstItem="cpl-Nb-6uS" firstAttribute="top" secondItem="W2d-wJ-21l" secondAttribute="top" constant="72" id="IcF-9g-qXF"/>
                             <constraint firstItem="W2d-wJ-21l" firstAttribute="bottom" secondItem="cpl-Nb-6uS" secondAttribute="bottom" constant="622" id="MC3-Im-chX"/>
+                            <constraint firstItem="csN-89-bh3" firstAttribute="top" secondItem="iGL-aX-qG2" secondAttribute="bottom" constant="136" id="RPe-jh-AUD"/>
                             <constraint firstItem="wsI-JM-UsA" firstAttribute="top" secondItem="cpl-Nb-6uS" secondAttribute="bottom" constant="172" id="dJz-p4-Tkp"/>
                             <constraint firstItem="W2d-wJ-21l" firstAttribute="bottom" secondItem="iGL-aX-qG2" secondAttribute="bottom" constant="293" id="fjI-AB-hm2"/>
                             <constraint firstItem="cpl-Nb-6uS" firstAttribute="centerX" secondItem="C1D-hj-Krs" secondAttribute="centerX" id="hoX-O9-Lvd"/>
                             <constraint firstItem="iGL-aX-qG2" firstAttribute="top" secondItem="wsI-JM-UsA" secondAttribute="bottom" constant="81" id="lT6-Vv-nnR"/>
+                            <constraint firstItem="W2d-wJ-21l" firstAttribute="bottom" secondItem="csN-89-bh3" secondAttribute="bottom" constant="122" id="rSv-Y8-DAv"/>
                             <constraint firstItem="wsI-JM-UsA" firstAttribute="centerX" secondItem="C1D-hj-Krs" secondAttribute="centerX" id="rf1-dY-ZZZ"/>
+                            <constraint firstItem="csN-89-bh3" firstAttribute="centerX" secondItem="C1D-hj-Krs" secondAttribute="centerX" id="tfp-WB-0Ae"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="i8B-P3-WGw"/>
                     <connections>
                         <outlet property="identityLabel" destination="iGL-aX-qG2" id="lVp-D6-xTD"/>
+                        <outlet property="nextRoundButton" destination="csN-89-bh3" id="0Mh-wY-vps"/>
                         <outlet property="votedLabel" destination="wsI-JM-UsA" id="psc-k7-9h7"/>
                         <outlet property="waitLabel" destination="cpl-Nb-6uS" id="Z3B-43-ATU"/>
                     </connections>
