--- a/Spy See/Spy See/Base.lproj/Main.storyboard
+++ b/Spy See/Spy See/Base.lproj/Main.storyboard
@@ -338,11 +338,11 @@
             <objects>
                 <viewController id="04L-e8-13C" customClass="SpeakViewController" customModule="Spy_See" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="h2j-GR-rST">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oWG-WB-0lb">
-                                <rect key="frame" x="46.666666666666657" y="186" width="300" height="21"/>
+                                <rect key="frame" x="46.666666666666657" y="142" width="300" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="rK3-d1-Prp"/>
                                 </constraints>
@@ -351,7 +351,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3fh-md-ark">
-                                <rect key="frame" x="46.666666666666657" y="372" width="300" height="21"/>
+                                <rect key="frame" x="46.666666666666657" y="337" width="300" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="H1t-el-oZ0"/>
                                 </constraints>
@@ -360,14 +360,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="3aR-80-GAS">
-                                <rect key="frame" x="76" y="516" width="240" height="128"/>
+                                <rect key="frame" x="76" y="481" width="240" height="128"/>
                                 <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZR6-Ta-uAq">
-                                <rect key="frame" x="172" y="679" width="51" height="35"/>
+                                <rect key="frame" x="172" y="644" width="51" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="paperplane.fill" catalog="system"/>
                                 <connections>
@@ -411,11 +411,11 @@
             <objects>
                 <viewController id="TBl-QV-YA4" customClass="VoteViewController" customModule="Spy_See" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="oge-iY-R5P">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="你覺得誰是臥底？" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Bi-bn-Vsw">
-                                <rect key="frame" x="96.666666666666686" y="177" width="200" height="21"/>
+                                <rect key="frame" x="96.666666666666686" y="133" width="200" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="rNR-ru-vuk"/>
                                 </constraints>
@@ -424,7 +424,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FSc-a4-gKj">
-                                <rect key="frame" x="146.66666666666666" y="667" width="100" height="35"/>
+                                <rect key="frame" x="146.66666666666666" y="632" width="100" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="Lbw-7w-xWO"/>
                                 </constraints>
@@ -454,18 +454,18 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vL1-J4-hGD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7732" y="4"/>
+            <point key="canvasLocation" x="7708" y="705"/>
         </scene>
         <!--Kill View Controller-->
         <scene sceneID="gr9-Vb-24s">
             <objects>
                 <viewController id="coD-jQ-cyL" customClass="KillViewController" customModule="Spy_See" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="C1D-hj-Krs">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="請等候其他玩家完成投票" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cpl-Nb-6uS">
-                                <rect key="frame" x="96.666666666666686" y="175" width="200" height="21"/>
+                                <rect key="frame" x="96.666666666666686" y="131" width="200" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="UUi-mE-N49"/>
                                 </constraints>
@@ -474,7 +474,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wsI-JM-UsA">
-                                <rect key="frame" x="5" y="368" width="383" height="36"/>
+                                <rect key="frame" x="5" y="333" width="383" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="383" id="vRe-2e-N8y"/>
                                 </constraints>
@@ -483,7 +483,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iGL-aX-qG2">
-                                <rect key="frame" x="96.666666666666686" y="485" width="200" height="40"/>
+                                <rect key="frame" x="96.666666666666686" y="450" width="200" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="Bzw-Az-cfc"/>
                                 </constraints>
@@ -492,7 +492,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="csN-89-bh3">
-                                <rect key="frame" x="146.66666666666666" y="661" width="100" height="35"/>
+                                <rect key="frame" x="146.66666666666666" y="626" width="100" height="35"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="W9T-I1-Tz6"/>
                                 </constraints>
@@ -526,6 +526,7 @@
                         <outlet property="nextRoundButton" destination="csN-89-bh3" id="0Mh-wY-vps"/>
                         <outlet property="votedLabel" destination="wsI-JM-UsA" id="psc-k7-9h7"/>
                         <outlet property="waitLabel" destination="cpl-Nb-6uS" id="Z3B-43-ATU"/>
+                        <segue destination="04L-e8-13C" kind="show" identifier="KillToSpeak" id="qp3-Hr-OcL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="13w-Op-Qcu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -535,26 +536,12 @@
         <!--Victory View Controller-->
         <scene sceneID="ClM-Di-whW">
             <objects>
-                <viewController id="zWf-sO-c4J" customClass="VictoryViewController" customModule="Spy_See" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="VictoryViewController" id="zWf-sO-c4J" customClass="VictoryViewController" customModule="Spy_See" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Zam-iu-rSu">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7d7-vi-2Qb">
-                                <rect key="frame" x="141" y="569" width="111" height="35"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="回遊戲大廳"/>
-                                <connections>
-                                    <action selector="backToHome:" destination="zWf-sO-c4J" eventType="touchUpInside" id="OCe-yR-gOm"/>
-                                </connections>
-                            </button>
-                        </subviews>
                         <viewLayoutGuide key="safeArea" id="EfV-Xt-y8V"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="7d7-vi-2Qb" firstAttribute="centerX" secondItem="Zam-iu-rSu" secondAttribute="centerX" id="8OE-fU-Bov"/>
-                            <constraint firstItem="EfV-Xt-y8V" firstAttribute="bottom" secondItem="7d7-vi-2Qb" secondAttribute="bottom" constant="214" id="d1f-Xe-DGo"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="8Jm-LF-Xfu"/>
                 </viewController>
@@ -582,6 +569,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
+        <segue reference="qp3-Hr-OcL"/>
         <segue reference="w66-on-Lkh"/>
     </inferredMetricsTieBreakers>
     <resources>
