--- a/Spy See/Spy See/Base.lproj/Main.storyboard
+++ b/Spy See/Spy See/Base.lproj/Main.storyboard
@@ -549,6 +549,21 @@
             </objects>
             <point key="canvasLocation" x="9387" y="4"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="XTn-if-5tB">
+            <objects>
+                <viewController id="8dI-9m-imQ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="EjH-BB-xQe">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="ATv-vV-9AH"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="II2-Ih-Fyb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="10205" y="4"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="QCp-Y1-tva">
             <objects>
