--- a/Spy See/Spy See/Base.lproj/Main.storyboard
+++ b/Spy See/Spy See/Base.lproj/Main.storyboard
@@ -89,7 +89,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="邀請碼：" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="v6b-B1-vFV">
-                                <rect key="frame" x="96.333333333333329" y="362" width="200.33333333333343" height="34"/>
+                                <rect key="frame" x="96.333333333333329" y="362" width="200.33333333333337" height="34"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="RJ7-qX-kyh"/>
                                 </constraints>
@@ -549,10 +549,10 @@
             </objects>
             <point key="canvasLocation" x="9387" y="4"/>
         </scene>
-        <!--View Controller-->
+        <!--Died View Controller-->
         <scene sceneID="XTn-if-5tB">
             <objects>
-                <viewController id="8dI-9m-imQ" sceneMemberID="viewController">
+                <viewController id="8dI-9m-imQ" customClass="DiedViewController" customModule="Spy_See" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="EjH-BB-xQe">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
