Clean invitation text field after sending

--- a/Spy See/Spy See/Base.lproj/Main.storyboard
+++ b/Spy See/Spy See/Base.lproj/Main.storyboard
@@ -585,7 +585,7 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="qp3-Hr-OcL"/>
-        <segue reference="w66-on-Lkh"/>
+        <segue reference="UiY-CT-8kC"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="paperplane.fill" catalog="system" width="128" height="119"/>
